--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.0",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.76.3",
