--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,15 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
-    "sharp": "^0.34.3"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-maps": "1.20.1",
+    "sharp": "^0.34.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
