--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
   "description": "BeSafe - Sistema completo de doações (Frontend + Backend)",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "backend": "cd backend && npm start",
-    "frontend": "cd frontend && npm start",
-    "dev": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
-    "backend:dev": "cd backend && npm run dev",
-    "frontend:dev": "cd frontend && npm run dev",
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "keywords": [
     "besafe",
@@ -21,8 +14,6 @@
     "html",
     "mysql"
   ],
-  "author": "BeSafe Team",
-  "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
