--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,8 @@
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^10.7.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "^0.79.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "5.4.0",
@@ -40,6 +40,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "babel-preset-expo": "~11.0.0"
+  },
+  "overrides": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "private": true
 }
