--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "frontend"
   ],
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "multer": "^2.0.2"
   },
   "overrides": {
